--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "root",
+  "name": "neo4j-cc",
   "private": true,
+  "scripts": {
+    "postinstall": "lerna bootstrap --hoist",
+    "clean": "lerna run clean",
+    "build": "lerna run build",
+    "pub": "lerna publish",
+    "test": "lerna run test"
+  },
   "devDependencies": {
     "lerna": "^3.22.1"
   }
