--- a/packages/cc-admin/package.json
+++ b/packages/cc-admin/package.json
@@ -3,34 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.1",
+    "@neo4j-cc/components": "*",
     "@tailwindcss/forms": "^0.2.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "capital-case": "^1.0.4",
     "formik": "^2.2.6",
     "fp-ts": "^2.9.5",
     "graphql": "^15.5.0",
-    "io-ts": "^2.2.15",
+    "io-ts": "^2.2.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^3.12.0",
+    "react-query": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
-    "typescript": "^4.1.2",
+    "typescript": "^4.2.3",
     "urql": "^2.0.1",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "npm run clean && npm run compile",
+    "clean": "rimraf -rf ./dist",
+    "compile": "craco build --config tsconfig.build.json",
     "test": "craco test",
     "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml"
@@ -54,18 +56,20 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.1",
+    "@craco/craco": "^6.1.1",
+    "@graphql-codegen/cli": "1.21.2",
     "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/typescript": "^1.21.0",
-    "@graphql-codegen/typescript-operations": "1.17.14",
-    "@graphql-codegen/typescript-react-apollo": "2.2.1",
-    "@graphql-codegen/typescript-react-query": "^1.2.2",
-    "@graphql-codegen/typescript-urql": "^2.0.3",
+    "@graphql-codegen/typescript": "^1.21.1",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-react-apollo": "2.2.2",
+    "@graphql-codegen/typescript-react-query": "^1.2.3",
+    "@graphql-codegen/typescript-urql": "^2.0.4",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-table": "^7.0.28",
+    "@types/react-table": "^7.0.29",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
+    "rimraf": "^3.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
