--- a/packages/cc-components/package.json
+++ b/packages/cc-components/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@neo4j-cc/components",
+  "author": "Andreas Kollegger",
   "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -12,7 +14,8 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdx build --tsconfig tsconfig.build.json",
+    "clean": "rimraf -rf ./dist",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
@@ -35,15 +38,13 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
-  },  
+  },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
     }
   },
-  "name": "cc-components",
-  "author": "Andreas Kollegger",
   "module": "dist/cc-components.esm.js",
   "size-limit": [
     {
@@ -76,6 +77,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
+    "rimraf": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.0",
     "sass-loader": "^11.0.1",
     "schema-dts": "^0.8.2",
