--- a/packages/cc-public/package.json
+++ b/packages/cc-public/package.json
@@ -45,7 +45,9 @@
     "flatted": "^3.1.1",
     "formik": "^2.2.6",
     "fp-ts": "^2.9.5",
+    "framer-motion": "^3.10.4",
     "gatsby": "^2.32.4",
+    "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-postcss": "^3.7.0",
@@ -55,6 +57,7 @@
     "gatsby-source-graphql": "^2.14.0",
     "gatsby-source-meetup": "^1.1.0",
     "gatsby-transformer-json": "^2.11.0",
+    "gatsby-transformer-yaml": "^3.1.0",
     "js-yaml": "^4.0.0",
     "luxon": "^1.26.0",
     "postcss": "^8.2.6",
@@ -91,6 +94,7 @@
     "@typescript-eslint/parser": "^4.15.1",
     "apollo": "^2.32.5",
     "axios": "^0.21.1",
+    "axios-rate-limit": "^1.3.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "cheerio": "^1.0.0-rc.5",
