--- a/packages/cc-pipe/package.json
+++ b/packages/cc-pipe/package.json
@@ -32,7 +32,9 @@
     "fetch:devto": "ts-node scripts/devto-to-orbit.ts"
   },
   "jest": {
-    "setupFilesAfterEnv": ["@relmify/jest-fp-ts"]
+    "setupFilesAfterEnv": [
+      "@relmify/jest-fp-ts"
+    ]
   },
   "husky": {
     "hooks": {
@@ -58,7 +60,8 @@
   "devDependencies": {
     "@relmify/jest-fp-ts": "^1.1.1",
     "@size-limit/preset-small-lib": "^4.10.2",
-    "@types/luxon": "^1.26.3",
+    "@stoplight/prism-cli": "^4.1.3",
+    "@types/luxon": "^1.26.4",
     "husky": "^6.0.0",
     "size-limit": "^4.10.2",
     "tsdx": "^0.14.1",
@@ -66,16 +69,16 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@effect-ts/core": "",
-    "@effect-ts/jest": "",
-    "@effect-ts/morphic": "",
-    "@effect-ts/node": "",
-    "@effect-ts/query": "",
+    "@effect-ts/core": "^0.36.3",
+    "@effect-ts/morphic": "^0.33.0",
+    "@effect-ts/node": "^0.22.0",
+    "@effect-ts/query": "^0.17.2",
     "@urql/core": "^2.0.0",
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
-    "fp-ts": "^2.10.2",
+    "fp-ts": "^2.10.4",
     "fp-ts-rxjs": "^0.6.13",
     "graphql": "^15.5.0",
     "luxon": "^1.26.0",
