--- a/packages/cc-server/package.json
+++ b/packages/cc-server/package.json
@@ -21,53 +21,55 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@neo4j/graphql": "^1.0.0-alpha.5",
-    "@nestjs/common": "^7.5.1",
+    "@apollo/gateway": "^0.26.2",
+    "@neo4j/graphql": "^1.0.0-beta.2",
+    "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.10",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/graphql": "^7.10.6",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.5",
     "@types/cli-color": "^2.0.0",
-    "apollo-server-express": "^2.21.0",
+    "apollo-server-express": "^2.23.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cli-color": "^2.0.0",
-    "fp-ts": "^2.9.5",
+    "fp-ts": "^2.10.4",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
-    "nanoid": "^3.1.20",
-    "neo4j-driver": "^4.2.2",
-    "pg": "^8.5.1",
+    "nanoid": "^3.1.22",
+    "neo4j-driver": "^4.2.3",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.7",
     "schema-dts": "^0.8.2",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.1",
+    "@nestjs/testing": "^7.6.15",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/nanoid": "^2.1.0",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@types/node": "^14.14.41",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.1",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.2.4"
   },
   "jest": {
     "moduleFileExtensions": [
