--- a/packages/cc-server/package.json
+++ b/packages/cc-server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/graphql": "^7.10.6",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.5",
@@ -38,8 +39,11 @@
     "fp-ts": "^2.10.4",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
+    "jwks-rsa": "^2.0.3",
     "nanoid": "^3.1.22",
     "neo4j-driver": "^4.2.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
