--- a/packages/cc-pipe/package.json
+++ b/packages/cc-pipe/package.json
@@ -62,6 +62,7 @@
     "@size-limit/preset-small-lib": "^4.10.2",
     "@stoplight/prism-cli": "^4.1.3",
     "@types/luxon": "^1.26.4",
+    "fast-check": "^2.14.0",
     "husky": "^6.0.0",
     "size-limit": "^4.10.2",
     "tsdx": "^0.14.1",
@@ -73,6 +74,7 @@
     "@effect-ts/morphic": "^0.33.0",
     "@effect-ts/node": "^0.22.0",
     "@effect-ts/query": "^0.17.2",
+    "@effect-ts/schema": "^0.3.0",
     "@urql/core": "^2.0.0",
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
