wip(pipe) migrating from morphic to schema

--- a/packages/cc-pipe/package.json
+++ b/packages/cc-pipe/package.json
@@ -58,33 +58,35 @@
     }
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-typescript": "^7.13.0",
     "@relmify/jest-fp-ts": "^1.1.1",
-    "@size-limit/preset-small-lib": "^4.10.2",
+    "@size-limit/preset-small-lib": "^4.11.0",
     "@types/jest": "^26.0.23",
     "@types/luxon": "^1.26.5",
-    "@types/node": "^15.0.3",
-    "fast-check": "^2.14.0",
+    "@types/node": "^15.6.1",
+    "fast-check": "^2.15.0",
     "husky": "^6.0.0",
-    "size-limit": "^4.10.2",
+    "io-ts": "^2.2.16",
+    "size-limit": "^4.11.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@effect-ts/core": "^0.38.1",
-    "@effect-ts/morphic": "^0.35.0",
-    "@effect-ts/node": "^0.24.0",
-    "@effect-ts/query": "^0.19.0",
-    "@effect-ts/schema": "^0.5.5",
-    "@urql/core": "^2.1.1",
+    "@effect-ts/core": "^0.40.0",
+    "@effect-ts/monocle": "^0.33.0",
+    "@effect-ts/schema": "^0.8.1",
+    "@urql/core": "^2.1.2",
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
     "cross-fetch": "^3.1.4",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "fp-ts": "^2.10.5",
     "graphql": "^15.5.0",
-    "luxon": "^1.26.0",
-    "rxjs": "^7.0.1",
+    "luxon": "^1.27.0",
+    "rxjs": "^7.1.0",
     "schema-dts": "^0.8.2",
     "urql": "^2.0.3",
     "yargs": "^17.0.1"
