--- a/packages/cc-server/package.json
+++ b/packages/cc-server/package.json
@@ -21,8 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/gateway": "^0.26.2",
-    "@neo4j/graphql": "^1.0.0-beta.2",
+    "@apollo/gateway": "^0.28.1",
+    "@neo4j/graphql": "^1.0.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
@@ -32,15 +32,15 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.5",
     "@types/cli-color": "^2.0.0",
-    "apollo-server-express": "^2.23.0",
+    "apollo-server-express": "^2.24.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cli-color": "^2.0.0",
-    "fp-ts": "^2.10.4",
+    "fp-ts": "^2.10.5",
     "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.4",
+    "graphql-tools": "^7.0.5",
     "jwks-rsa": "^2.0.3",
-    "nanoid": "^3.1.22",
+    "nanoid": "^3.1.23",
     "neo4j-driver": "^4.2.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -49,7 +49,6 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7",
     "schema-dts": "^0.8.2",
-    "sqlite3": "^5.0.2",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -59,18 +58,18 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/nanoid": "^2.1.0",
-    "@types/node": "^14.14.41",
+    "@types/node": "^15.3.0",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^9.1.1",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
