--- a/packages/cc-site/package.json
+++ b/packages/cc-site/package.json
@@ -12,7 +12,10 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "fetch": "run-s fetch:*",
+    "fetch:gh": "node scripts/fetch-gh-repos.mjs > data/projects.json",
+    "fetch:people": "node scripts/fetch-discourse-users.mjs > data/people.json"
   },
   "dependencies": {
     "@fontsource/fira-code": "^4.4.5",
@@ -26,8 +29,10 @@
     "gatsby-plugin-google-analytics": "^3.7.1",
     "gatsby-plugin-mdx": "^2.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-graphql": "^3.7.1",
+    "gatsby-transformer-json": "^3.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
@@ -35,9 +40,19 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/node": "^15.12.4",
+    "@types/react-table": "^7.7.1",
+    "@urql/core": "^2.1.4",
+    "@xstate/react": "^1.3.4",
     "autoprefixer": "^10.2.6",
+    "fp-ts": "^2.10.5",
     "gatsby-plugin-postcss": "^4.7.1",
+    "graphql": "^15.5.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "luxon": "^1.27.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.5",
+    "react-table": "^7.7.0",
     "tailwindcss": "^2.2.2"
   }
 }
