--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,9 @@
         "libs/feature/ninja-leaderboard/src/index.ts"
       ],
       "@neo4j-cc/feature/person": ["libs/feature/person/src/index.ts"],
+      "@neo4j-cc/feature/release-notes": [
+        "libs/feature/release-notes/src/index.ts"
+      ],
       "@neo4j-cc/feature/twin4j": ["libs/feature/twin4j/src/index.ts"],
       "@neo4j-cc/model": ["libs/model/src/index.ts"],
       "@neo4j-cc/nest/neo4j-dbms": ["libs/nest/neo4j-dbms/src/index.ts"],
