--- a/package.json
+++ b/package.json
@@ -70,20 +70,20 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/cypress": "13.4.6",
-    "@nrwl/devkit": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/nest": "13.4.6",
-    "@nrwl/node": "13.4.6",
-    "@nrwl/nx-plugin": "13.4.6",
-    "@nrwl/react": "13.4.6",
-    "@nrwl/storybook": "13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/web": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
+    "@nrwl/cli": "13.6.1",
+    "@nrwl/cypress": "13.6.1",
+    "@nrwl/devkit": "13.6.1",
+    "@nrwl/eslint-plugin-nx": "13.6.1",
+    "@nrwl/jest": "13.6.1",
+    "@nrwl/linter": "13.6.1",
+    "@nrwl/nest": "13.6.1",
+    "@nrwl/node": "13.6.1",
+    "@nrwl/nx-plugin": "13.6.1",
+    "@nrwl/react": "13.6.1",
+    "@nrwl/storybook": "13.6.1",
+    "@nrwl/tao": "13.6.1",
+    "@nrwl/web": "13.6.1",
+    "@nrwl/workspace": "13.6.1",
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "6.4.14",
     "@storybook/builder-webpack5": "6.4.14",
@@ -116,7 +116,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "27.2.3",
-    "prettier": "^2.4.1",
+    "prettier": "2.5.1",
     "react-test-renderer": "17.0.2",
     "storybook-addon-apollo-client": "^4.0.11",
     "ts-jest": "27.0.5",
