feat(access-neo4j) data-access library for fp-style neo4j

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth0/auth0-react": "^1.8.0",
     "@effect-ts/core": "^0.52.1",
     "@effect-ts/monocle": "^0.39.0",
+    "@effect-ts/query": "^0.23.0",
     "@effect-ts/schema": "^0.15.0",
     "@effect-ts/system": "^0.49.1",
     "@effect-ts/tracing-utils": "^0.5.2",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "7.15.8",
     "@babel/preset-typescript": "7.15.0",
+    "@effect-ts/jest": "^0.32.1",
     "@fontsource/fira-code": "^4.5.2",
     "@fontsource/nunito-sans": "^4.5.1",
     "@graphql-codegen/cli": "^2.3.0",
