--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "autoprefixer": "^10.4.2",
     "class-validator": "^0.13.2",
     "core-js": "^3.20.2",
+    "cross-fetch": "^3.1.5",
     "date-fns": "^2.28.0",
+    "discourse-js": "^3.0.6",
     "faker": "^5.5.3",
     "fast-check": "^2.21.0",
     "fp-ts": "^2.11.8",
     "graphql": "^16.2.0",
     "graphql-tools": "^8.2.0",
     "neo4j-driver": "^4.4.1",
+    "openapi-typescript-fetch": "^1.1.2",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
