--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
-    "target": "es2015"
+    "target": "es2015",
+    "experimentalDecorators": true
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
