--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "@amityco/ts-sdk": "^0.0.1-beta.12",
     "@apollo/client": "^3.5.7",
     "@apollo/react-hooks": "^4.0.0",
-    "@auth0/auth0-react": "^1.8.0",
+    "@auth0/auth0-react": "^1.9.0",
     "@effect-ts/core": "^0.55.1",
     "@effect-ts/monocle": "^0.40.1",
     "@effect-ts/query": "^0.23.0",
     "@effect-ts/schema": "^0.15.0",
     "@effect-ts/system": "^0.52.1",
     "@effect-ts/tracing-utils": "^0.5.2",
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@neo4j/graphql": "^2.5.5",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.0.2",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^9.0.5",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/typeorm": "^8.0.3",
     "@relate/common": "^1.0.4-alpha.4",
+    "@storybook/core-server": "6.4.21",
     "announcekit-react": "^2.1.7",
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
@@ -44,20 +45,22 @@
     "fp-ts": "^2.11.8",
     "graphql": "^16.2.0",
     "graphql-tools": "^8.2.0",
-    "neo4j-driver": "^4.4.1",
+    "neo4j-driver": "^4.4.5",
     "openapi-typescript-fetch": "^1.1.2",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "18.0.0",
     "react-json-view": "^1.21.3",
     "react-router-dom": "6.2.1",
     "react-table": "^7.7.0",
+    "react-test-renderer": "18.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
     "rxjs": "~7.5.2",
     "schema-dts": "^1.0.0",
     "sqlite3": "^5.0.2",
-    "tailwindcss": "^3.0.15",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typeorm": "^0.2.41"
   },
@@ -73,54 +76,54 @@
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.7.2",
-    "@nrwl/cypress": "13.7.2",
-    "@nrwl/devkit": "13.7.2",
-    "@nrwl/eslint-plugin-nx": "13.7.2",
-    "@nrwl/jest": "13.7.2",
-    "@nrwl/linter": "13.7.2",
-    "@nrwl/nest": "13.7.2",
-    "@nrwl/node": "13.7.2",
-    "@nrwl/nx-plugin": "13.7.2",
-    "@nrwl/react": "13.7.2",
-    "@nrwl/storybook": "13.7.2",
-    "@nrwl/tao": "13.7.2",
-    "@nrwl/web": "13.7.2",
-    "@nrwl/workspace": "13.7.2",
+    "@nestjs/schematics": "^8.0.10",
+    "@nestjs/testing": "^8.4.4",
+    "@nrwl/cli": "13.10.1",
+    "@nrwl/cypress": "13.10.1",
+    "@nrwl/devkit": "13.10.1",
+    "@nrwl/eslint-plugin-nx": "13.10.1",
+    "@nrwl/jest": "13.10.1",
+    "@nrwl/linter": "13.10.1",
+    "@nrwl/nest": "13.10.1",
+    "@nrwl/node": "13.10.1",
+    "@nrwl/nx-plugin": "13.10.1",
+    "@nrwl/react": "13.10.1",
+    "@nrwl/storybook": "13.10.1",
+    "@nrwl/tao": "13.10.1",
+    "@nrwl/web": "13.10.1",
+    "@nrwl/workspace": "13.10.1",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-essentials": "6.4.18",
-    "@storybook/builder-webpack5": "6.4.18",
-    "@storybook/manager-webpack5": "6.4.18",
+    "@storybook/addon-essentials": "6.4.21",
+    "@storybook/builder-webpack5": "6.4.21",
+    "@storybook/manager-webpack5": "6.4.21",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "6.4.18",
+    "@storybook/react": "6.4.21",
     "@svgr/webpack": "^5.5.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/faker": "^5.5.9",
-    "@types/jest": "27.4.0",
+    "@types/jest": "27.4.1",
     "@types/node": "16.10.3",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.1",
     "@types/react-table": "^7.7.9",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "babel-jest": "27.2.3",
     "babel-loader": "8.2.2",
     "cypress": "^8.5.0",
-    "eslint": "8.7.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "html-webpack-plugin": "^4.5.2",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "prettier": "2.5.1",
     "react-test-renderer": "17.0.2",
     "storybook-addon-apollo-client": "^4.0.11",
@@ -128,6 +131,6 @@
     "tslib": "^2.0.0",
     "typescript": "~4.4.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.68.0"
+    "webpack": "^5.72.0"
   }
 }
