wip admin with auth

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.4.4",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@relate/common": "^1.0.4-alpha.4",
@@ -36,17 +37,27 @@
     "apollo-server-express": "^3.6.1",
     "autoprefixer": "^10.4.2",
     "class-validator": "^0.13.2",
+    "connect-flash": "^0.1.1",
     "core-js": "^3.20.2",
     "cross-fetch": "^3.1.5",
     "date-fns": "^2.28.0",
     "discourse-js": "^3.0.6",
+    "express-handlebars": "^6.0.4",
+    "express-jwt": "^6.1.1",
+    "express-openid-connect": "^2.7.2",
+    "express-session": "^1.17.2",
     "faker": "^5.5.3",
     "fast-check": "^2.21.0",
     "fp-ts": "^2.11.8",
     "graphql": "^16.2.0",
     "graphql-tools": "^8.2.0",
+    "hbs": "^4.2.0",
+    "jwks-rsa": "^2.0.5",
     "neo4j-driver": "^4.4.5",
     "openapi-typescript-fetch": "^1.1.2",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -103,9 +114,15 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/connect-flash": "^0.0.37",
+    "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/express-session": "^1.17.4",
     "@types/faker": "^5.5.9",
     "@types/jest": "27.4.1",
     "@types/node": "16.10.3",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.1",
