--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@effect-ts/schema": "^0.15.0",
     "@effect-ts/system": "^0.52.1",
     "@effect-ts/tracing-utils": "^0.5.2",
-    "@headlessui/react": "^1.5.0",
+    "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
     "@neo4j/graphql": "^2.5.5",
     "@nestjs/common": "^8.4.4",
@@ -31,11 +31,11 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@relate/common": "^1.0.4-alpha.4",
-    "@storybook/core-server": "6.4.21",
+    "@storybook/core-server": "6.5.0-beta.1",
     "announcekit-react": "^2.1.7",
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.5",
     "class-validator": "^0.13.2",
     "connect-flash": "^0.1.1",
     "core-js": "^3.20.2",
@@ -58,20 +58,20 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "postcss": "^8.4.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-is": "18.0.0",
+    "postcss": "^8.4.12",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.1.0",
     "react-json-view": "^1.21.3",
-    "react-router-dom": "6.2.1",
+    "react-router-dom": "6.3.0",
     "react-table": "^7.7.0",
-    "react-test-renderer": "18.0.0",
+    "react-test-renderer": "18.1.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
     "rxjs": "~7.5.2",
     "schema-dts": "^1.0.0",
     "sqlite3": "^5.0.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.1",
     "typeorm": "^0.2.41"
   },
@@ -79,8 +79,8 @@
     "@babel/core": "7.15.8",
     "@babel/preset-typescript": "7.15.0",
     "@effect-ts/jest": "^0.33.0",
-    "@fontsource/fira-code": "^4.5.2",
-    "@fontsource/nunito-sans": "^4.5.1",
+    "@fontsource/fira-code": "^4.5.9",
+    "@fontsource/nunito-sans": "^4.5.6",
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/import-types-preset": "^2.1.4",
     "@graphql-codegen/near-operation-file-preset": "^2.1.4",
@@ -89,31 +89,29 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@nestjs/schematics": "^8.0.10",
     "@nestjs/testing": "^8.4.4",
-    "@nrwl/cli": "13.10.1",
-    "@nrwl/cypress": "13.10.1",
-    "@nrwl/devkit": "13.10.1",
-    "@nrwl/eslint-plugin-nx": "13.10.1",
-    "@nrwl/jest": "13.10.1",
-    "@nrwl/linter": "13.10.1",
-    "@nrwl/nest": "13.10.1",
-    "@nrwl/node": "13.10.1",
-    "@nrwl/nx-plugin": "13.10.1",
-    "@nrwl/react": "13.10.1",
-    "@nrwl/storybook": "13.10.1",
-    "@nrwl/tao": "13.10.1",
-    "@nrwl/web": "13.10.1",
-    "@nrwl/workspace": "13.10.1",
-    "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-essentials": "6.4.21",
-    "@storybook/builder-webpack5": "6.4.21",
-    "@storybook/manager-webpack5": "6.4.21",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "6.4.21",
-    "@svgr/webpack": "^5.5.0",
+    "@nrwl/cli": "14.0.3",
+    "@nrwl/cypress": "14.0.3",
+    "@nrwl/devkit": "14.0.3",
+    "@nrwl/eslint-plugin-nx": "14.0.3",
+    "@nrwl/jest": "14.0.3",
+    "@nrwl/linter": "14.0.3",
+    "@nrwl/nest": "14.0.3",
+    "@nrwl/node": "14.0.3",
+    "@nrwl/nx-plugin": "14.0.3",
+    "@nrwl/react": "14.0.3",
+    "@nrwl/storybook": "14.0.3",
+    "@nrwl/tao": "^14.0.3",
+    "@nrwl/web": "14.0.3",
+    "@nrwl/workspace": "14.0.3",
+    "@storybook/addon-essentials": "6.5.0-beta.1",
+    "@storybook/builder-webpack5": "6.5.0-beta.1",
+    "@storybook/manager-webpack5": "6.5.0-beta.1",
+    "@storybook/preset-scss": "1.0.3",
+    "@storybook/react": "6.5.0-beta.1",
+    "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/react": "13.1.1",
     "@types/connect-flash": "^0.0.37",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
@@ -123,30 +121,29 @@
     "@types/node": "16.10.3",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "@types/react-router-dom": "5.3.1",
-    "@types/react-table": "^7.7.9",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "babel-jest": "27.2.3",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.0",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react-table": "^7.7.11",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
+    "babel-jest": "27.5.1",
     "babel-loader": "8.2.2",
     "cypress": "^8.5.0",
-    "eslint": "8.12.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "8.14.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-react-hooks": "4.5.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "27.5.1",
     "prettier": "2.5.1",
-    "react-test-renderer": "17.0.2",
-    "storybook-addon-apollo-client": "^4.0.11",
-    "ts-jest": "27.0.5",
+    "react-test-renderer": "18.1.0",
+    "ts-jest": "27.1.4",
     "tslib": "^2.0.0",
-    "typescript": "~4.4.3",
+    "typescript": "~4.6.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
   }
