--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+migrations.json
 
 # System Files
 .DS_Store
@@ -40,3 +41,6 @@ Thumbs.db
 
 # sqlite databases
 *.db
+
+# secrets
+.env
