--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -8,6 +8,6 @@
     "target": "es2015",
     "experimentalDecorators": true
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
