--- a/package.json
+++ b/package.json
@@ -30,118 +30,118 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@relate/common": "^1.0.4-alpha.4",
-    "@storybook/core-server": "6.5.0-beta.1",
+    "@storybook/core-server": "6.5.3",
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "^10.4.7",
     "class-validator": "^0.13.2",
     "connect-flash": "^0.1.1",
-    "core-js": "^3.20.2",
+    "core-js": "^3.22.5",
     "cross-fetch": "^3.1.5",
     "date-fns": "^2.28.0",
     "discourse-js": "^3.0.6",
-    "express-handlebars": "^6.0.4",
-    "express-jwt": "^6.1.1",
+    "express-handlebars": "^6.0.6",
+    "express-jwt": "^7.7.2",
     "express-openid-connect": "^2.7.2",
-    "express-session": "^1.17.2",
-    "fast-check": "^2.21.0",
-    "fp-ts": "^2.11.8",
+    "express-session": "^1.17.3",
+    "fast-check": "^2.25.0",
+    "fp-ts": "^2.12.1",
     "graphql": "^16.2.0",
     "graphql-tools": "^8.2.0",
     "hbs": "^4.2.0",
     "jwks-rsa": "^2.0.5",
     "neo4j-driver": "^4.4.5",
-    "openapi-typescript-fetch": "^1.1.2",
-    "passport": "^0.5.2",
+    "openapi-typescript-fetch": "^1.1.3",
+    "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-is": "18.1.0",
     "react-json-view": "^1.21.3",
     "react-router-dom": "6.3.0",
-    "react-table": "^7.7.0",
+    "react-table": "^7.8.0",
     "react-test-renderer": "18.1.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
-    "rxjs": "~7.5.2",
-    "schema-dts": "^1.0.0",
-    "sqlite3": "^5.0.2",
+    "rxjs": "~7.5.5",
+    "schema-dts": "^1.1.0",
+    "sqlite3": "^5.0.8",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@babel/core": "7.15.8",
-    "@babel/preset-typescript": "7.15.0",
+    "@babel/core": "7.18.0",
+    "@babel/preset-typescript": "7.17.12",
     "@effect-ts/jest": "^0.33.0",
     "@fontsource/fira-code": "^4.5.9",
-    "@fontsource/nunito-sans": "^4.5.6",
+    "@fontsource/nunito-sans": "^4.5.8",
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/import-types-preset": "^2.1.4",
     "@graphql-codegen/near-operation-file-preset": "^2.1.4",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-react-apollo": "^3.2.2",
-    "@nestjs/schematics": "^8.0.10",
-    "@nestjs/testing": "^8.4.4",
-    "@nrwl/cli": "14.0.5",
-    "@nrwl/cypress": "14.0.5",
-    "@nrwl/devkit": "14.0.5",
-    "@nrwl/eslint-plugin-nx": "14.0.5",
-    "@nrwl/jest": "14.0.5",
-    "@nrwl/linter": "14.0.5",
-    "@nrwl/nest": "14.0.5",
-    "@nrwl/node": "14.0.5",
-    "@nrwl/nx-plugin": "14.0.5",
-    "@nrwl/react": "14.0.5",
-    "@nrwl/storybook": "14.0.5",
-    "@nrwl/tao": "^14.0.3",
-    "@nrwl/web": "14.0.5",
-    "@nrwl/workspace": "14.0.5",
-    "@storybook/addon-essentials": "6.5.0-beta.1",
-    "@storybook/builder-webpack5": "6.5.0-beta.1",
-    "@storybook/manager-webpack5": "6.5.0-beta.1",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.5",
+    "@nrwl/cli": "14.1.7",
+    "@nrwl/cypress": "14.1.7",
+    "@nrwl/devkit": "14.1.7",
+    "@nrwl/eslint-plugin-nx": "14.1.7",
+    "@nrwl/jest": "14.1.7",
+    "@nrwl/linter": "14.1.7",
+    "@nrwl/nest": "14.1.7",
+    "@nrwl/node": "14.1.7",
+    "@nrwl/nx-plugin": "14.1.7",
+    "@nrwl/react": "14.1.7",
+    "@nrwl/storybook": "14.1.7",
+    "@nrwl/tao": "14.1.7",
+    "@nrwl/web": "14.1.7",
+    "@nrwl/workspace": "14.1.7",
+    "@storybook/addon-essentials": "6.5.3",
+    "@storybook/builder-webpack5": "6.5.3",
+    "@storybook/manager-webpack5": "6.5.3",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.5.0-beta.1",
+    "@storybook/react": "6.5.3",
     "@svgr/webpack": "^6.2.1",
-    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
-    "@testing-library/react": "13.1.1",
+    "@testing-library/react": "13.2.0",
     "@types/connect-flash": "^0.0.37",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.4",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.10.3",
+    "@types/jest": "27.5.1",
+    "@types/node": "17.0.35",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
     "@types/react-router-dom": "5.3.3",
-    "@types/react-table": "^7.7.11",
-    "@typescript-eslint/eslint-plugin": "5.21.0",
-    "@typescript-eslint/parser": "5.21.0",
-    "babel-jest": "27.5.1",
-    "babel-loader": "8.2.2",
-    "cypress": "^8.5.0",
-    "eslint": "8.14.0",
+    "@types/react-table": "^7.7.12",
+    "@typescript-eslint/eslint-plugin": "5.25.0",
+    "@typescript-eslint/parser": "5.25.0",
+    "babel-jest": "28.1.0",
+    "babel-loader": "8.2.5",
+    "cypress": "^9.6.1",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.5.0",
-    "html-webpack-plugin": "^4.5.2",
-    "jest": "27.5.1",
-    "prettier": "2.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "28.1.0",
+    "prettier": "2.6.2",
     "react-test-renderer": "18.1.0",
-    "ts-jest": "27.1.4",
-    "tslib": "^2.0.0",
-    "typescript": "~4.6.3",
+    "ts-jest": "28.0.2",
+    "ts-node": "9.1.1",
+    "tslib": "^2.4.0",
+    "typescript": "~4.6.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.1"
   }
 }
-
