--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jwks-rsa": "^2.0.5",
     "neo4j-driver": "^4.4.5",
     "nest-commander": "^2.5.0",
+    "octokit": "^1.7.1",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
