--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-session": "^1.17.3",
     "fast-check": "^2.25.0",
     "fp-ts": "^2.12.1",
+    "gluegun": "^5.1.2",
     "graphql": "^16.2.0",
     "graphql-tools": "^8.2.0",
     "hbs": "^4.2.0",
