--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "@apollo/client": "^3.5.7",
     "@apollo/react-hooks": "^4.0.0",
     "@auth0/auth0-react": "^1.9.0",
-    "@effect-ts/core": "^0.55.1",
-    "@effect-ts/monocle": "^0.40.1",
-    "@effect-ts/query": "^0.23.0",
-    "@effect-ts/schema": "^0.15.0",
-    "@effect-ts/system": "^0.52.1",
+    "@effect-ts/core": "^0.60.1",
+    "@effect-ts/system": "^0.57.1",
     "@effect-ts/tracing-utils": "^0.5.2",
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
@@ -72,7 +69,7 @@
     "schema-dts": "^1.1.0",
     "sqlite3": "^5.0.8",
     "tailwindcss": "^3.0.24",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
@@ -103,6 +100,7 @@
     "@nrwl/tao": "14.1.7",
     "@nrwl/web": "14.1.7",
     "@nrwl/workspace": "14.1.7",
+    "@oclif/test": "^2.1.0",
     "@storybook/addon-essentials": "6.5.3",
     "@storybook/builder-webpack5": "6.5.3",
     "@storybook/manager-webpack5": "6.5.3",
@@ -138,10 +136,12 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "28.1.0",
+    "oclif": "^3.0.1",
     "prettier": "2.6.2",
     "react-test-renderer": "18.1.0",
+    "shx": "^0.3.4",
     "ts-jest": "28.0.2",
-    "ts-node": "9.1.1",
+    "ts-node": "^10.7.0",
     "tslib": "^2.4.0",
     "typescript": "~4.6.4",
     "url-loader": "^4.1.1",
