--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@svgr/webpack": "^6.2.1",
     "@swc-node/register": "^1.5.1",
     "@swc/core": "^1.2.204",
+    "@swc/jest": "0.2.20",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/react": "13.3.0",
@@ -138,6 +139,7 @@
     "jest": "28.1.1",
     "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
+    "swc-loader": "0.1.15",
     "ts-jest": "28.0.5",
     "ts-node": "10.8.1",
     "tslib": "^2.4.0",
