--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@neo4j/graphql": "^2.5.5",
+    "@nest-toolbox/winston-logger": "^1.4.17",
     "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.7",
@@ -50,10 +51,14 @@
     "hbs": "^4.2.0",
     "jwks-rsa": "^2.0.5",
     "neo4j-driver": "^4.4.6",
+    "nestjs-pino": "^2.6.0",
+    "nestjs-winston-logger": "^1.1.11",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pino-http": "^7.1.0",
+    "pino-pretty": "^8.1.0",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
