--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "connect-flash": "^0.1.1",
     "core-js": "^3.23.1",
     "cross-fetch": "^3.1.5",
+    "daisyui": "^2.17.0",
     "date-fns": "^2.28.0",
     "discourse-js": "^3.0.6",
     "express-handlebars": "^6.0.6",
@@ -48,11 +49,11 @@
     "graphql-tools": "^8.2.0",
     "hbs": "^4.2.0",
     "jwks-rsa": "^2.0.5",
-    "nest-commander": "^2.5.0",
-    "octokit": "^1.7.1",
     "neo4j-driver": "^4.4.6",
+    "nest-commander": "^2.5.0",
     "nestjs-pino": "^2.6.0",
     "nestjs-winston-logger": "^1.1.11",
+    "octokit": "^1.7.1",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -61,6 +62,7 @@
     "pino-pretty": "^8.1.0",
     "postcss": "^8.4.14",
     "react": "18.2.0",
+    "react-daisyui": "^2.0.5",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-json-view": "^1.21.3",
