--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       ],
       "@c--c/data-access-github": ["libs/data-access/github/src/index.ts"],
       "@c--c/data-access-neo4": ["libs/data-access/discourse/src/index.ts"],
+      "@neo4j-cc/data-access-khoros": ["libs/data-access/khoros/src/index.ts"],
       "@neo4j-cc/data-access-neo4j": ["libs/data-access/neo4j/src/index.ts"],
       "@neo4j-cc/data-access/hooks": ["libs/data-access/hooks/src/index.ts"],
       "@neo4j-cc/data-access/person": ["libs/data-access/person/src/index.ts"],
