--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "apollo-server-express": "^3.6.1",
     "autoprefixer": "^10.4.7",
     "class-validator": "^0.13.2",
+    "clsx": "^1.2.1",
     "connect-flash": "^0.1.1",
     "core-js": "^3.23.1",
     "cross-fetch": "^3.1.5",
@@ -75,6 +76,7 @@
     "rxjs": "~7.5.5",
     "schema-dts": "^1.1.0",
     "sqlite3": "^5.0.8",
+    "tailwind-merge": "^1.4.0",
     "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typeorm": "^0.3.6",
