--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/typeorm": "^8.1.4",
     "@storybook/core-server": "6.5.9",
+    "@tanstack/react-table": "^8.3.2",
     "@tsplus/runtime": "^0.1.3",
     "@tsplus/stdlib": "^0.2.2",
     "apollo-server-core": "^3.6.1",
@@ -156,8 +157,8 @@
     "prettier": "2.7.1",
     "quicktype": "^15.0.261",
     "react-test-renderer": "18.2.0",
-    "swc-loader": "0.1.15",
     "storybook-addon-themes": "^6.1.0",
+    "swc-loader": "0.1.15",
     "ts-jest": "28.0.5",
     "ts-node": "10.8.2",
     "tslib": "^2.4.0",
