feat(graphql) initial neo4j-graphql type packages

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,7 +37,8 @@
       "@neo4j-cc/model": ["libs/model/src/index.ts"],
       "@neo4j-cc/nest/neo4j-dbms": ["libs/nest/neo4j-dbms/src/index.ts"],
       "@neo4j-cc/ui": ["libs/ui/src/index.ts"],
-      "@neo4j-cc/util-arbitrary": ["libs/util/arbitrary/src/index.ts"]
+      "@neo4j-cc/util-arbitrary": ["libs/util/arbitrary/src/index.ts"],
+      "@neo4j-cc/graphql-types": ["libs/graphql-types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
