--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@apollo/client": "^3.6.9",
     "@apollo/react-hooks": "^4.0.0",
     "@auth0/auth0-react": "^1.10.2",
-    "@effect-ts/core": "^0.60.2",
-    "@effect-ts/system": "^0.57.2",
+    "@effect-ts/core": "^0.60.3",
+    "@effect-ts/system": "^0.57.3",
     "@effect-ts/tracing-utils": "^0.5.2",
-    "@effect/core": "^0.0.7",
+    "@effect/core": "^0.0.11",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@neo4j/graphql": "^3.6.2",
@@ -31,10 +31,11 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.0.9",
     "@nestjs/typeorm": "^9.0.1",
-    "@storybook/core-server": "6.5.9",
-    "@tanstack/react-table": "^8.3.2",
-    "@tsplus/runtime": "^0.1.3",
-    "@tsplus/stdlib": "^0.2.2",
+    "@storybook/core-server": "6.5.10",
+    "@tanstack/react-table": "^8.5.11",
+    "@tsplus/runtime": "^0.1.6",
+    "@tsplus/stdlib": "^0.2.5",
+    "apollo-server": "^3.10.1",
     "apollo-server-core": "^3.10.1",
     "apollo-server-express": "^3.10.1",
     "autoprefixer": "10.4.8",
@@ -43,14 +44,14 @@
     "connect-flash": "^0.1.1",
     "core-js": "^3.23.1",
     "cross-fetch": "^3.1.5",
-    "daisyui": "^2.20.0",
-    "date-fns": "^2.28.0",
+    "daisyui": "^2.24.0",
+    "date-fns": "^2.29.1",
     "discourse-js": "^3.0.6",
     "express-handlebars": "^6.0.6",
     "express-jwt": "^7.7.5",
-    "express-openid-connect": "^2.7.2",
+    "express-openid-connect": "^2.8.0",
     "express-session": "^1.17.3",
-    "fast-check": "^2.25.0",
+    "fast-check": "^3.1.1",
     "fp-ts": "^2.12.2",
     "gluegun": "^5.1.2",
     "graphql": "^16.5.0",
@@ -59,7 +60,7 @@
     "jwks-rsa": "^2.1.4",
     "neo4j-driver": "^4.4.7",
     "nestjs-pino": "^3.1.1",
-    "octokit": "^1.7.1",
+    "octokit": "^2.0.7",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -68,7 +69,7 @@
     "pino-pretty": "^9.0.0",
     "postcss": "8.4.16",
     "react": "18.2.0",
-    "react-daisyui": "^2.1.0",
+    "react-daisyui": "^2.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -76,20 +77,20 @@
     "react-test-renderer": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
-    "rxjs": "~7.5.5",
+    "rxjs": "~7.5.6",
     "schema-dts": "^1.1.0",
-    "sqlite3": "^5.0.8",
-    "tailwind-merge": "^1.5.0",
+    "sqlite3": "^5.0.11",
+    "tailwind-merge": "^1.5.1",
     "tailwindcss": "3.1.8",
     "tslib": "^2.4.0",
-    "typeorm": "^0.3.6",
+    "typeorm": "^0.3.7",
     "universal-base64": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
     "@babel/preset-typescript": "7.17.12",
-    "@fontsource/fira-code": "^4.5.10",
-    "@fontsource/nunito-sans": "^4.5.8",
+    "@fontsource/fira-code": "^4.5.11",
+    "@fontsource/nunito-sans": "^4.5.9",
     "@graphql-codegen/cli": "^2.11.6",
     "@graphql-codegen/import-types-preset": "^2.2.3",
     "@graphql-codegen/near-operation-file-preset": "^2.4.1",
@@ -103,6 +104,7 @@
     "@nrwl/devkit": "14.5.6",
     "@nrwl/eslint-plugin-nx": "14.5.6",
     "@nrwl/jest": "14.5.6",
+    "@nrwl/js": "14.5.6",
     "@nrwl/linter": "14.5.6",
     "@nrwl/nest": "14.5.6",
     "@nrwl/node": "14.5.6",
@@ -112,37 +114,38 @@
     "@nrwl/tao": "14.5.6",
     "@nrwl/web": "14.5.6",
     "@nrwl/workspace": "14.5.6",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addons": "^6.5.9",
-    "@storybook/builder-webpack5": "6.5.9",
-    "@storybook/manager-webpack5": "6.5.9",
+    "@relate/cli": "^1.0.4-alpha.7",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addons": "^6.5.10",
+    "@storybook/builder-webpack5": "6.5.10",
+    "@storybook/manager-webpack5": "6.5.10",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.5.9",
-    "@storybook/theming": "^6.5.9",
-    "@svgr/webpack": "^6.2.1",
+    "@storybook/react": "6.5.10",
+    "@storybook/theming": "^6.5.10",
+    "@svgr/webpack": "^6.3.1",
     "@swc-node/register": "^1.5.1",
-    "@swc/core": "^1.2.204",
-    "@swc/jest": "0.2.20",
+    "@swc/core": "^1.2.233",
+    "@swc/jest": "0.2.22",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@testing-library/react": "13.3.0",
     "@types/connect-flash": "^0.0.37",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
-    "@types/express-session": "^1.17.4",
-    "@types/jest": "28.1.2",
-    "@types/node": "18.7.1",
+    "@types/express-session": "^1.17.5",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.7.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/react-table": "^7.7.12",
-    "@typescript-eslint/eslint-plugin": "5.30.5",
-    "@typescript-eslint/parser": "5.30.5",
-    "babel-jest": "28.1.2",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.2.5",
-    "chromatic": "^6.7.1",
+    "chromatic": "^6.7.4",
     "color-string": "^1.9.1",
     "cypress": "^9.7.0",
     "eslint": "8.19.0",
@@ -157,18 +160,17 @@
     "jest": "28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "openapi-typescript-codegen": "^0.23.0",
-    "postman-to-openapi": "^2.4.0",
+    "postman-to-openapi": "^2.4.1",
     "prettier": "2.7.1",
     "quicktype": "^15.0.261",
     "react-test-renderer": "18.2.0",
     "storybook-addon-themes": "^6.1.0",
-    "swc-loader": "0.1.15",
-    "ts-jest": "28.0.5",
+    "swc-loader": "0.2.3",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslib": "^2.4.0",
     "typescript": "4.7.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.73.0"
+    "webpack": "^5.74.0"
   }
 }
-
