wip(nest) re-integrate nest server for GraphQL + REST API

--- a/apps/prototype/khoros/project.json
+++ b/apps/prototype/khoros/project.json
@@ -8,7 +8,7 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "compiler": "swc",
+        "compiler": "babel",
         "outputPath": "dist/apps/prototype/khoros",
         "index": "apps/prototype/khoros/src/index.html",
         "baseHref": "/",
