--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@neo4j/graphql": "^3.8.0",
-    "@nestjs/common": "9.0.11",
+    "@nestjs/apollo": "^10.1.0",
+    "@nestjs/common": "9.1.2",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "9.0.11",
-    "@nestjs/graphql": "^10.1.1",
+    "@nestjs/core": "9.1.2",
+    "@nestjs/graphql": "^10.1.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "9.0.11",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/platform-express": "9.1.2",
+    "@nestjs/swagger": "^6.1.2",
+    "@nhogs/nestjs-neo4j": "^0.5.6",
     "@storybook/core-server": "6.5.12",
     "@tanstack/react-query": "^4.3.4",
     "@tanstack/react-table": "^8.5.13",
@@ -39,7 +41,7 @@
     "apollo-server": "^3.10.2",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
-    "autoprefixer": "10.4.11",
+    "autoprefixer": "10.4.12",
     "class-validator": "^0.13.2",
     "clsx": "^1.2.1",
     "connect-flash": "^0.1.1",
@@ -64,6 +66,7 @@
     "jwks-rsa": "^2.1.4",
     "neo4j-driver": "^5.0.1",
     "nestjs-pino": "^3.1.1",
+    "next": "12.3.1",
     "octokit": "^2.0.7",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.6.0",
@@ -76,7 +79,7 @@
     "react-daisyui": "^2.4.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "react-router-dom": "6.4.0",
+    "react-router-dom": "6.4.1",
     "react-table": "^7.8.0",
     "react-test-renderer": "18.2.0",
     "reflect-metadata": "^0.1.13",
@@ -88,7 +91,6 @@
     "tailwindcss": "3.1.8",
     "theme-change": "^2.2.0",
     "tslib": "^2.4.0",
-    "typeorm": "^0.3.9",
     "universal-base64": "^2.1.0"
   },
   "devDependencies": {
@@ -104,22 +106,23 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.0.11",
-    "@nrwl/cli": "14.7.9",
-    "@nrwl/cypress": "14.7.9",
-    "@nrwl/devkit": "14.7.9",
-    "@nrwl/eslint-plugin-nx": "14.7.9",
-    "@nrwl/jest": "14.7.9",
-    "@nrwl/js": "14.7.9",
-    "@nrwl/linter": "14.7.9",
-    "@nrwl/nest": "14.7.9",
-    "@nrwl/node": "14.7.9",
-    "@nrwl/nx-plugin": "14.7.9",
-    "@nrwl/react": "14.7.9",
-    "@nrwl/storybook": "14.7.9",
-    "@nrwl/tao": "14.7.9",
-    "@nrwl/web": "14.7.9",
-    "@nrwl/workspace": "14.7.9",
+    "@nestjs/testing": "9.1.2",
+    "@nrwl/cli": "14.7.11",
+    "@nrwl/cypress": "14.7.11",
+    "@nrwl/devkit": "14.7.11",
+    "@nrwl/eslint-plugin-nx": "14.7.11",
+    "@nrwl/jest": "14.7.11",
+    "@nrwl/js": "14.7.11",
+    "@nrwl/linter": "14.7.11",
+    "@nrwl/nest": "14.7.11",
+    "@nrwl/next": "14.7.11",
+    "@nrwl/node": "14.7.11",
+    "@nrwl/nx-plugin": "14.7.11",
+    "@nrwl/react": "14.7.11",
+    "@nrwl/storybook": "14.7.11",
+    "@nrwl/tao": "14.7.11",
+    "@nrwl/web": "14.7.11",
+    "@nrwl/workspace": "14.7.11",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addons": "^6.5.12",
@@ -129,22 +132,19 @@
     "@storybook/react": "6.5.12",
     "@storybook/theming": "^6.5.12",
     "@svgr/webpack": "^6.3.1",
-    "@swc-node/register": "^1.5.1",
-    "@swc/core": "^1.2.233",
-    "@swc/jest": "0.2.22",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/react": "13.4.0",
     "@types/connect-flash": "^0.0.37",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.5",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "28.1.8",
-    "@types/node": "18.7.14",
+    "@types/jest": "29.0.3",
+    "@types/node": "18.7.18",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.20",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/react-table": "^7.7.12",
@@ -157,11 +157,12 @@
     "color-string": "^1.9.1",
     "cypress": "^9.7.0",
     "eslint": "8.19.0",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
@@ -173,13 +174,11 @@
     "quicktype": "^15.1.0",
     "react-test-renderer": "18.2.0",
     "storybook-addon-themes": "^6.1.0",
-    "swc-loader": "0.2.3",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "4.7.4",
+    "typescript": "4.8.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0"
   }
 }
-
