--- a/nx.json
+++ b/nx.json
@@ -39,6 +39,12 @@
         "style": "scss",
         "linter": "eslint"
       }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "css",
+        "linter": "eslint"
+      }
     }
   },
   "defaultProject": "prototype-daisy",
