wip(pipe) tweaks to archived github data ingest.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,7 @@
       "@neo4j-cc/data-access-github": ["libs/data-access/github/src/index.ts"],
       "@neo4j-cc/data-access-khoros": ["libs/data-access/khoros/src/index.ts"],
       "@neo4j-cc/data-access-neo4j": ["libs/data-access/neo4j/src/index.ts"],
+      "@neo4j-cc/data-access/csv": ["libs/data-access/csv/src/index.ts"],
       "@neo4j-cc/feature/ninja-leaderboard": [
         "libs/feature/ninja-leaderboard/src/index.ts"
       ],
@@ -35,6 +36,7 @@
       "@neo4j-cc/graphql-types": ["libs/graphql-types/src/index.ts"],
       "@neo4j-cc/model": ["libs/model/src/index.ts"],
       "@neo4j-cc/nest/neo4j-dbms": ["libs/nest/neo4j-dbms/src/index.ts"],
+      "@neo4j-cc/prelude": ["libs/prelude/src/index.ts"],
       "@neo4j-cc/ui": ["libs/ui/src/index.ts"],
       "@neo4j-cc/util-arbitrary": ["libs/util/arbitrary/src/index.ts"]
     }
