--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@effect-ts/core": "^0.60.4",
     "@effect-ts/system": "^0.57.4",
     "@effect-ts/tracing-utils": "^0.5.2",
-    "@effect/core": "^0.0.14",
+    "@effect/core": "^0.0.15",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
     "@neo4j/graphql": "^3.8.0",
@@ -36,8 +36,8 @@
     "@storybook/core-server": "6.5.12",
     "@tanstack/react-query": "^4.9.0",
     "@tanstack/react-table": "^8.5.15",
-    "@tsplus/runtime": "^0.1.8",
-    "@tsplus/stdlib": "^0.2.6",
+    "@tsplus/runtime": "^0.1.10",
+    "@tsplus/stdlib": "^0.2.8",
     "apollo-server": "^3.10.2",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
@@ -54,7 +54,7 @@
     "express-jwt": "^7.7.5",
     "express-openid-connect": "^2.8.0",
     "express-session": "^1.17.3",
-    "fast-check": "^3.1.3",
+    "fast-check": "^3.1.4",
     "fp-ts": "^2.12.3",
     "gluegun": "^5.1.2",
     "graphql": "^16.6.0",
@@ -64,11 +64,12 @@
     "graphql-tools": "^8.3.6",
     "hbs": "^4.2.0",
     "jwks-rsa": "^2.1.4",
-    "neo4j-driver": "^5.0.1",
+    "neo4j-driver": "^5.1.0",
     "nestjs-pino": "^3.1.1",
     "next": "12.3.1",
     "octokit": "^2.0.7",
     "openapi-typescript-fetch": "^1.1.3",
+    "papaparse": "^5.3.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -107,22 +108,22 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.2",
-    "@nrwl/cli": "14.8.2",
-    "@nrwl/cypress": "14.8.2",
-    "@nrwl/devkit": "14.8.2",
-    "@nrwl/eslint-plugin-nx": "14.8.2",
-    "@nrwl/jest": "14.8.2",
-    "@nrwl/js": "14.8.2",
-    "@nrwl/linter": "14.8.2",
-    "@nrwl/nest": "14.8.2",
-    "@nrwl/next": "14.8.2",
-    "@nrwl/node": "14.8.2",
-    "@nrwl/nx-plugin": "14.8.2",
-    "@nrwl/react": "14.8.2",
-    "@nrwl/storybook": "14.8.2",
-    "@nrwl/tao": "14.8.2",
-    "@nrwl/web": "14.8.2",
-    "@nrwl/workspace": "14.8.2",
+    "@nrwl/cli": "14.8.3",
+    "@nrwl/cypress": "14.8.3",
+    "@nrwl/devkit": "14.8.3",
+    "@nrwl/eslint-plugin-nx": "14.8.3",
+    "@nrwl/jest": "14.8.3",
+    "@nrwl/js": "14.8.3",
+    "@nrwl/linter": "14.8.3",
+    "@nrwl/nest": "14.8.3",
+    "@nrwl/next": "14.8.3",
+    "@nrwl/node": "14.8.3",
+    "@nrwl/nx-plugin": "14.8.3",
+    "@nrwl/react": "14.8.3",
+    "@nrwl/storybook": "14.8.3",
+    "@nrwl/tao": "14.8.3",
+    "@nrwl/web": "14.8.3",
+    "@nrwl/workspace": "14.8.3",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addons": "^6.5.12",
@@ -142,6 +143,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "29.0.3",
     "@types/node": "18.7.18",
+    "@types/papaparse": "^5.3.5",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.21",
@@ -182,4 +184,3 @@
     "webpack": "^5.74.0"
   }
 }
-
