--- a/apps/prototype/khoros/project.json
+++ b/apps/prototype/khoros/project.json
@@ -72,7 +72,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/prototype/khoros"],
+      "outputs": ["{workspaceRoot}/coverage/apps/prototype/khoros"],
       "options": {
         "jestConfig": "apps/prototype/khoros/jest.config.ts",
         "passWithNoTests": true
