--- a/libs/feature/ninja-leaderboard/project.json
+++ b/libs/feature/ninja-leaderboard/project.json
@@ -15,7 +15,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/feature/ninja-leaderboard"],
+      "outputs": ["{workspaceRoot}/coverage/libs/feature/ninja-leaderboard"],
       "options": {
         "jestConfig": "libs/feature/ninja-leaderboard/jest.config.ts",
         "passWithNoTests": true
