--- a/libs/model/project.json
+++ b/libs/model/project.json
@@ -12,7 +12,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/model"],
+      "outputs": ["{workspaceRoot}/coverage/libs/model"],
       "options": {
         "jestConfig": "libs/model/jest.config.ts",
         "passWithNoTests": true
