--- a/libs/util/arbitrary/project.json
+++ b/libs/util/arbitrary/project.json
@@ -11,7 +11,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/util/arbitrary"],
+      "outputs": ["{workspaceRoot}/coverage/libs/util/arbitrary"],
       "options": {
         "jestConfig": "libs/util/arbitrary/jest.config.ts",
         "passWithNoTests": true
