--- a/package.json
+++ b/package.json
@@ -109,22 +109,23 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.2",
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/cypress": "14.8.4",
-    "@nrwl/devkit": "14.8.4",
-    "@nrwl/eslint-plugin-nx": "14.8.4",
-    "@nrwl/jest": "14.8.4",
-    "@nrwl/js": "14.8.4",
-    "@nrwl/linter": "14.8.4",
-    "@nrwl/nest": "14.8.4",
-    "@nrwl/next": "14.8.4",
-    "@nrwl/node": "14.8.4",
-    "@nrwl/nx-plugin": "14.8.4",
-    "@nrwl/react": "14.8.4",
-    "@nrwl/storybook": "14.8.4",
-    "@nrwl/tao": "14.8.4",
-    "@nrwl/web": "14.8.4",
-    "@nrwl/workspace": "14.8.4",
+    "@nrwl/cli": "15.0.0",
+    "@nrwl/cypress": "15.0.0",
+    "@nrwl/devkit": "15.0.0",
+    "@nrwl/eslint-plugin-nx": "15.0.0",
+    "@nrwl/jest": "15.0.0",
+    "@nrwl/js": "15.0.0",
+    "@nrwl/linter": "15.0.0",
+    "@nrwl/nest": "15.0.0",
+    "@nrwl/next": "15.0.0",
+    "@nrwl/node": "15.0.0",
+    "@nrwl/nx-cloud": "14.7.0",
+    "@nrwl/nx-plugin": "15.0.0",
+    "@nrwl/react": "15.0.0",
+    "@nrwl/storybook": "15.0.0",
+    "@nrwl/tao": "15.0.0",
+    "@nrwl/web": "15.0.0",
+    "@nrwl/workspace": "15.0.0",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addons": "^6.5.12",
