wip(cli) migrate to @effect/core

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,9 +22,13 @@
         "libs/data-access/discourse/src/index.ts"
       ],
       "@neo4j-cc/data-access-github": ["libs/data-access/github/src/index.ts"],
+      "@neo4j-cc/data-access-http": ["libs/data-access/http/src/index.ts"],
       "@neo4j-cc/data-access-khoros": ["libs/data-access/khoros/src/index.ts"],
       "@neo4j-cc/data-access-neo4j": ["libs/data-access/neo4j/src/index.ts"],
-      "@neo4j-cc/data-access/csv": ["libs/data-access/csv/src/index.ts"],
+      "@neo4j-cc/data-access-csv": ["libs/data-access/csv/src/index.ts"],
+      "@neo4j-cc/example/effect-service": [
+        "libs/example/effect-service/src/index.ts"
+      ],
       "@neo4j-cc/feature/ninja-leaderboard": [
         "libs/feature/ninja-leaderboard/src/index.ts"
       ],
