--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build-storybook": "nx run ui:build-storybook",
     "deploy-storybook": "chromatic --build-script-name=build-storybook"
   },
+  "bin": {
+    "neo4j-cc": "./dist/apps/cc-cli/main.js"
+  },
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -19,8 +22,9 @@
     "@effect-ts/core": "^0.60.4",
     "@effect-ts/system": "^0.57.4",
     "@effect-ts/tracing-utils": "^0.5.2",
-    "@effect/core": "^0.0.15",
-    "@fp-ts/core": "^0.0.2",
+    "@effect/core": "^0.0.16",
+    "@fp-ts/core": "^0.0.6",
+    "@fp-ts/data": "^0.0.8",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@neo4j/graphql": "^3.8.0",
@@ -55,8 +59,8 @@
     "express-jwt": "^7.7.5",
     "express-openid-connect": "^2.8.0",
     "express-session": "^1.17.3",
-    "fast-check": "^3.1.4",
-    "fp-ts": "^2.12.3",
+    "fast-check": "^3.3.0",
+    "fp-ts": "^2.13.1",
     "gluegun": "^5.1.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
@@ -109,23 +113,23 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.2",
-    "@nrwl/cli": "15.0.0",
-    "@nrwl/cypress": "15.0.0",
-    "@nrwl/devkit": "15.0.0",
-    "@nrwl/eslint-plugin-nx": "15.0.0",
-    "@nrwl/jest": "15.0.0",
-    "@nrwl/js": "15.0.0",
-    "@nrwl/linter": "15.0.0",
-    "@nrwl/nest": "15.0.0",
-    "@nrwl/next": "15.0.0",
-    "@nrwl/node": "15.0.0",
-    "@nrwl/nx-cloud": "14.7.0",
-    "@nrwl/nx-plugin": "15.0.0",
-    "@nrwl/react": "15.0.0",
-    "@nrwl/storybook": "15.0.0",
-    "@nrwl/tao": "15.0.0",
-    "@nrwl/web": "15.0.0",
-    "@nrwl/workspace": "15.0.0",
+    "@nrwl/cli": "15.0.3",
+    "@nrwl/cypress": "15.0.3",
+    "@nrwl/devkit": "15.0.3",
+    "@nrwl/eslint-plugin-nx": "15.0.3",
+    "@nrwl/jest": "15.0.3",
+    "@nrwl/js": "15.0.3",
+    "@nrwl/linter": "15.0.3",
+    "@nrwl/nest": "15.0.3",
+    "@nrwl/next": "15.0.3",
+    "@nrwl/node": "15.0.3",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/nx-plugin": "15.0.3",
+    "@nrwl/react": "15.0.3",
+    "@nrwl/storybook": "15.0.3",
+    "@nrwl/tao": "15.0.3",
+    "@nrwl/web": "15.0.3",
+    "@nrwl/workspace": "15.0.3",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addons": "^6.5.12",
@@ -143,8 +147,8 @@
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.5",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "29.0.3",
-    "@types/node": "18.7.18",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
     "@types/papaparse": "^5.3.5",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -170,15 +174,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.3",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "openapi-typescript-codegen": "^0.23.0",
     "postman-to-openapi": "^2.6.0",
     "prettier": "2.7.1",
     "quicktype": "^15.1.0",
     "react-test-renderer": "18.2.0",
     "storybook-addon-themes": "^6.1.0",
-    "ts-jest": "28.0.8",
+    "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tslib": "^2.4.0",
     "typescript": "4.8.4",
