feat(prototype-editors) experiment with various text editors

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@apollo/client": "^3.6.9",
     "@apollo/react-hooks": "^4.0.0",
     "@auth0/auth0-react": "^1.11.0",
+    "@bytemd/plugin-gfm": "^1.17.4",
+    "@bytemd/react": "^1.17.4",
     "@effect-ts/core": "^0.60.4",
     "@effect-ts/system": "^0.57.4",
     "@effect-ts/tracing-utils": "^0.5.2",
@@ -47,10 +49,11 @@
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "autoprefixer": "10.4.12",
+    "bytemd": "^1.17.4",
     "class-validator": "^0.13.2",
     "clsx": "^1.2.1",
     "connect-flash": "^0.1.1",
-    "core-js": "^3.25.1",
+    "core-js": "^3.6.5",
     "cross-fetch": "^3.1.5",
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
@@ -89,7 +92,7 @@
     "react-table": "^7.8.0",
     "react-test-renderer": "18.2.0",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.9",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~7.5.6",
     "schema-dts": "^1.1.0",
     "sqlite3": "^5.1.1",
@@ -149,11 +152,11 @@
     "@types/express-session": "^1.17.5",
     "@types/graphql": "^14.5.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.18",
     "@types/papaparse": "^5.3.5",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.21",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/react-table": "^7.7.12",
@@ -165,7 +168,7 @@
     "babel-loader": "8.2.5",
     "chromatic": "^6.9.0",
     "color-string": "^1.9.1",
-    "cypress": "^9.7.0",
+    "cypress": "^10.7.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
