chore(build) bump nx

--- a/apps/prototype/cc-show-e2e/project.json
+++ b/apps/prototype/cc-show-e2e/project.json
@@ -25,5 +25,6 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["prototype-cc-show"]
+  "implicitDependencies": ["prototype-cc-show"],
+  "name": "prototype-cc-show-e2e"
 }
