--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@auth0/auth0-react": "^1.11.0",
     "@bytemd/plugin-gfm": "^1.17.4",
     "@bytemd/react": "^1.17.4",
-    "@effect/data": "^0.2.0",
-    "@effect/io": "^0.3.0",
+    "@effect/cli": "^0.4.0",
+    "@effect/data": "^0.12.2",
+    "@effect/io": "^0.20.0",
     "@effect/query": "^0.2.0",
-    "@fp-ts/optic": "^0.1.0",
-    "@fp-ts/schema": "^0.1.3",
+    "@effect/schema": "^0.12.1",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@neo4j/graphql": "^3.8.0",
@@ -42,8 +42,6 @@
     "@storybook/core-server": "6.5.15",
     "@tanstack/react-query": "^4.9.0",
     "@tanstack/react-table": "^8.5.15",
-    "@tsplus/runtime": "^0.1.10",
-    "@tsplus/stdlib": "^0.2.8",
     "apollo-server": "^3.10.2",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
@@ -66,10 +64,8 @@
     "express-openid-connect": "^2.8.0",
     "express-session": "^1.17.3",
     "fast-check": "^3.3.0",
-    "fp-ts": "^2.13.1",
     "fs-jetpack": "^5.1.0",
     "global-agent": "^3.0.0",
-    "gluegun": "^5.1.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-scalars": "^1.18.0",
@@ -129,25 +125,25 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.2",
-    "@nrwl/cli": "15.7.2",
-    "@nrwl/cypress": "15.7.2",
-    "@nrwl/devkit": "15.7.2",
-    "@nrwl/eslint-plugin-nx": "15.7.2",
-    "@nrwl/jest": "15.7.2",
-    "@nrwl/js": "15.7.2",
-    "@nrwl/linter": "15.7.2",
-    "@nrwl/nest": "15.7.2",
-    "@nrwl/next": "15.7.2",
-    "@nrwl/node": "15.7.2",
-    "@nrwl/nx-cloud": "15.1.1",
-    "@nrwl/nx-plugin": "15.7.2",
-    "@nrwl/react": "15.7.2",
-    "@nrwl/storybook": "15.7.2",
-    "@nrwl/tao": "15.7.2",
-    "@nrwl/vite": "15.7.2",
-    "@nrwl/web": "15.7.2",
-    "@nrwl/webpack": "15.7.2",
-    "@nrwl/workspace": "15.7.2",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/cypress": "15.9.2",
+    "@nrwl/devkit": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/jest": "15.9.2",
+    "@nrwl/js": "15.9.2",
+    "@nrwl/linter": "15.9.2",
+    "@nrwl/nest": "15.9.2",
+    "@nrwl/next": "15.9.2",
+    "@nrwl/node": "15.9.2",
+    "@nrwl/nx-cloud": "15.3.5",
+    "@nrwl/nx-plugin": "15.9.2",
+    "@nrwl/react": "15.9.2",
+    "@nrwl/storybook": "15.9.2",
+    "@nrwl/tao": "15.9.2",
+    "@nrwl/vite": "15.9.2",
+    "@nrwl/web": "15.9.2",
+    "@nrwl/webpack": "15.9.2",
+    "@nrwl/workspace": "15.9.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.15",
@@ -169,7 +165,7 @@
     "@types/express-session": "^1.17.5",
     "@types/global-agent": "^2.1.1",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "28.1.1",
+    "@types/jest": "29.4.4",
     "@types/node": "18.11.9",
     "@types/papaparse": "^5.3.5",
     "@types/passport-jwt": "^3.0.6",
@@ -185,7 +181,7 @@
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "apollo": "^2.34.0",
-    "babel-jest": "28.1.3",
+    "babel-jest": "29.4.3",
     "babel-loader": "8.2.5",
     "chromatic": "^6.9.0",
     "color-string": "^1.9.1",
@@ -201,8 +197,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "jsdom": "~20.0.3",
     "openapi-typescript-codegen": "^0.23.0",
     "postman-to-openapi": "^2.6.0",
@@ -214,11 +210,11 @@
     "style-loader": "^3.3.0",
     "stylus": "^0.55.0",
     "stylus-loader": "^7.1.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
-    "typescript": "4.8.4",
+    "typescript": "4.9.5",
     "url-loader": "^4.1.1",
     "vite": "^4.0.4",
     "vite-plugin-eslint": "^1.8.1",
